examples/negative/40_fluo_medium_mismatch.fluo
# BREAKS: mixing two media on one connected subnet (fluorite/02 sec. 1:
#   "One medium per connected subnet in v1; a mismatch is a compile
#   error (FOPEN-1)").
# EXPECT: E0210
# Self-calibration (WO-49): resolved via the `impl FluidPort<medium=...>`
# binding (fluorite/02 sec. 2): `AirLine` declares its wetted side bound
# to `ShopAir` (gas); the `bad` edge's `from=AirLine.vent` ref resolves
# `bad -> AirLine -> ShopAir`, which disagrees with `Mixed`'s own
# `medium=Water` header -- a mixed-medium subnet, caught here BEFORE the
# WO-32 flownet payload is ever constructed.
import std.fluorite (Pipe)

medium Water: liquid
    props: registry(potable_water_nist)

medium ShopAir: gas
    props: registry(air_nist)

part AirLine:
    impl FluidPort<medium=ShopAir, dia=12mm> for self as vent:
        bore = turned.inlet

flownet Mixed(medium=Water):
    reference: ambient(101kPa, 293K)
    nodes: a, b
    edges:
        bad: Pipe(from=AirLine.vent) (a -> b)
        # `bad` resolves through `AirLine`'s FluidPort binding to
        # ShopAir (gas), while the net header fixes Water -- a
        # mixed-medium subnet.
